--- a/Music.UWP/MainPage.xaml
+++ b/Music.UWP/MainPage.xaml
@@ -9,19 +9,60 @@
     Loaded="Page_Loaded">
 
 	<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <RelativePanel>
+            <Button Name="HamburgerButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;" FontSize="36" Click="HamburgerButton_Click" />
+        </RelativePanel>
 
-		<StackPanel>
-			<TextBox Name="NewArtistName"></TextBox>
-			<Button Click="Add_Click">Add Artist</Button>
-			<ListView Name="Artists">
-				<ListView.ItemTemplate>
-					<DataTemplate>
-						<TextBlock Text="{Binding Name}" />
-					</DataTemplate>
-				</ListView.ItemTemplate>
-			</ListView>
-			
-		</StackPanel>
+        <SplitView Name="MySplitView"
+                   Grid.Row="1"
+                   DisplayMode="CompactOverlay"
+                   OpenPaneLength="200"
+                   CompactPaneLength="56"
+                   HorizontalAlignment="Left">
 
+            <SplitView.Pane>
+                <ListView Name="IconsListBox" 
+                         SelectionMode="Single"
+                         SelectionChanged="IconsListBox_SelectionChanged">
+                    <!--<ListBoxItem>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontFamily="Segoe MDL2 Assets" Text="&#xE13D;" FontSize="36" />
+                            <TextBlock Text="Artists" FontSize="24" Margin="20,0,0,0" />
+                        </StackPanel>
+                    </ListBoxItem>
+
+                    <ListBoxItem>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontFamily="Segoe MDL2 Assets" Text="&#xE93C;" FontSize="36" />
+                            <TextBlock Text="Albums" FontSize="24" Margin="20,0,0,0" />
+                        </StackPanel>
+                    </ListBoxItem>
+
+                    <ListBoxItem>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontFamily="Segoe MDL2 Assets" Text="&#xEC4F;" FontSize="36" />
+                            <TextBlock Text="Genres" FontSize="24" Margin="20,0,0,0" />
+                        </StackPanel>
+                    </ListBoxItem>-->
+
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock FontFamily="Segoe MDL2 Assets" Text="{Binding Icon}" FontSize="36" />
+                                <TextBlock Text="{Binding Label}" FontSize="24" Margin="20,0,0,0" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </SplitView.Pane>
+            <SplitView.Content>
+                <Frame Name="MyFrame" />
+            </SplitView.Content>
+        </SplitView>
+        
 	</Grid>
 </Page>
