--- a/Music.UWP/Albums/AlbumListPage.xaml
+++ b/Music.UWP/Albums/AlbumListPage.xaml
@@ -1,14 +1,40 @@
 ﻿<Page
-    x:Class="Music.UWP.AlbumListPage"
+    x:Class="Music.UWP.Albums.AlbumListPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Music.UWP"
+    xmlns:local="using:Music.UWP.Albums"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="using:Music.Model"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
+    <Page.Resources>
+        <Grid x:Name="CreateAlbum">
 
+            <StackPanel>
+                <TextBox Name="NewAlbumName"/>
+                <Button Click="Add_Click" Content="Add Album" />
+
+            </StackPanel>
+
+
+        </Grid>
+
+        <DataTemplate x:Key="MasterListViewItemTemplate" x:DataType="models:Album">
+            <StackPanel>
+                <TextBlock Text="{x:Bind Name}" />
+            </StackPanel>
+        </DataTemplate>
+
+    </Page.Resources>
+
+    <Grid x:Name="LayoutRoot">
+        <ListView Name="Albums"
+                  ItemTemplate="{StaticResource MasterListViewItemTemplate}"
+                  Grid.Row="1"
+                  IsItemClickEnabled="True"
+                  ItemClick="AlbumClick">
+        </ListView>
     </Grid>
 </Page>
