refactor: using the repositories

--- a/Music.UWP/Albums/AlbumDetailPage.xaml
+++ b/Music.UWP/Albums/AlbumDetailPage.xaml
@@ -22,7 +22,7 @@
                 Margin="0,8"
                 Style="{ThemeResource TitleTextBlockStyle}"
                 HorizontalAlignment="Left"
-                Text="{x:Bind Item.Name}"/>
+                Text="{x:Bind Album.Name}"/>
         </StackPanel>
     </Grid>
 </Page>
