--- a/Music.Web/ClientApp/src/app/artists/artists.component.html
+++ b/Music.Web/ClientApp/src/app/artists/artists.component.html
@@ -2,6 +2,8 @@
 
 <p *ngIf="!artists"><em>Loading...</em></p>
 
+<a routerLink="/artists/create">Create artist</a>
+
 <table class='table table-striped' aria-labelledby="tableLabel" *ngIf="artists">
   <thead>
     <tr>
