--- a/Music.Web/ClientApp/src/app/artist/artist.component.html
+++ b/Music.Web/ClientApp/src/app/artist/artist.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="artist">
   <div>
     <span>{{ artist.id }}</span>
   </div>
@@ -8,5 +8,7 @@
 </div>
 <div>
   <button (click)="saveArtist()">Save</button>
-  <a routerLink="/artists">Back</a>
+  <button (click)="deleteArtist()">Delete</button>
+  <a [routerLink]="['/artists']">Backtest</a>
 </div>
+ 
