--- a/Music.Web/ClientApp/src/app/artist/artist.component.html
+++ b/Music.Web/ClientApp/src/app/artist/artist.component.html
@@ -9,6 +9,6 @@
 <div>
   <button (click)="saveArtist()">Save</button>
   <button (click)="deleteArtist()">Delete</button>
-  <a [routerLink]="['/artists']">Backtest</a>
+  <a [routerLink]="['/artists']">Back</a>
 </div>
  
