--- a/Music.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Music.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -26,13 +26,10 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/artists']">Artists</a>
+          </li>
+		  <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/albums']">Albums</a>
           </li>
         </ul>
       </div>
