--- a/Music.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Music.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -26,10 +26,19 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/albums']">Albums</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/artists']">Artists</a>
           </li>
-		  <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/albums']">Albums</a>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/discs']">Discs</a>
+          </li>     
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/genres']">Genres</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/tracks']">Tracks</a>
           </li>
         </ul>
       </div>
