--- a/Music.Web/ClientApp/src/app/app.component.html
+++ b/Music.Web/ClientApp/src/app/app.component.html
@@ -1,6 +1,14 @@
-<body>
-  <app-nav-menu></app-nav-menu>
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
-</body>
+<mat-toolbar color="primary">
+  <span>Music library</span>
+  <span class="example-fill-remaining-space"></span>  
+</mat-toolbar> 
+<nav mat-tab-nav-bar>
+  <a mat-tab-link
+    *ngFor="let link of navLinks"
+    [routerLink]="link.link"
+    routerLinkActive #rla="routerLinkActive"
+    [active]="rla.isActive">
+    {{ link.label }}
+  </a>
+</nav>
+<router-outlet></router-outlet>
