--- a/Music.Web/ClientApp/src/app/artists/artists.component.html
+++ b/Music.Web/ClientApp/src/app/artists/artists.component.html
@@ -1,20 +1,20 @@
-<h1 id="tableLabel">Artists</h1>
+<mat-card>
+  <a mat-button [routerLink]="['/artists', 'new']">Create artist</a>
 
-<p *ngIf="!artists"><em>Loading...</em></p>
-
-<a [routerLink]="['/artists', 'new']">Create artist</a>
-
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="artists">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Name</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let artist of artists">
-      <td>{{ artist.id }}</td>
-      <td><a [routerLink]="['/artists', artist.id]">{{ artist.name }}</a></td>
-    </tr>
-  </tbody>
-</table>
+  <table mat-table [dataSource]="artists">
+    
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let artist">{{ artist.id }}</td>
+    </ng-container>
+    
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let artist">{{ artist.name }}</td>
+    </ng-container>
+    
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let artist; columns: displayedColumns;" (click)="goToArtist(artist)"></tr>
+    
+  </table>
+</mat-card>
