--- a/Music.Web/ClientApp/src/app/genres/genres.component.html
+++ b/Music.Web/ClientApp/src/app/genres/genres.component.html
@@ -1,20 +1,25 @@
-<h1 id="tableLabel">Genres</h1>
+<mat-card>
+  <a mat-button [routerLink]="['/genres', 'new']">Create genre</a>
 
-<p *ngIf="!genres"><em>Loading...</em></p>
-
-<a [routerLink]="['/genres', 'new']">Create genre</a>
-
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="genres">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Name</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let genre of genres">
-      <td>{{ genre.id }}</td>
-      <td><a [routerLink]="['/genres', genre.id]">{{ genre.name }}</a></td>
-    </tr>
-  </tbody>
-</table>
+  <table mat-table [dataSource]="genres">
+    
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let genre">{{ genre.id }}</td>
+    </ng-container>
+    
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let genre">{{ genre.name }}</td>
+    </ng-container>
+    
+    <ng-container matColumnDef="parentGenre">
+      <th mat-header-cell *matHeaderCellDef>ParentGenre</th>
+      <td mat-cell *matCellDef="let genre">{{ genre.parentGenre?.name }}</td>
+    </ng-container>
+    
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let genre; columns: displayedColumns;" (click)="goToGenre(genre)"></tr>
+    
+  </table>
+</mat-card>
