--- a/Music.Web/ClientApp/src/app/tracks/tracks.component.html
+++ b/Music.Web/ClientApp/src/app/tracks/tracks.component.html
@@ -1,20 +1,25 @@
-<h1 id="tableLabel">Tracks</h1>
+<mat-card>
+  <a mat-button [routerLink]="['/tracks', 'new']">Create track</a>
 
-<p *ngIf="!tracks"><em>Loading...</em></p>
-
-<a [routerLink]="['/tracks', 'new']">Create track</a>
-
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="tracks">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Name</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let track of tracks">
-      <td>{{ track.id }}</td>
-      <td><a [routerLink]="['/tracks', track.id]">{{ track.name }}</a></td>
-    </tr>
-  </tbody>
-</table>
+  <table mat-table [dataSource]="tracks">
+    
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let track">{{ track.id }}</td>
+    </ng-container>
+    
+    <ng-container matColumnDef="number">
+      <th mat-header-cell *matHeaderCellDef>Number</th>
+      <td mat-cell *matCellDef="let track">{{ track.number }}</td>
+    </ng-container>
+    
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let track">{{ track.name }}</td>
+    </ng-container>
+    
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let track; columns: displayedColumns;" (click)="goToTrack(track)"></tr>
+    
+  </table>
+</mat-card>
