--- a/Music.Web/ClientApp/src/app/genre/genre.component.html
+++ b/Music.Web/ClientApp/src/app/genre/genre.component.html
@@ -1,26 +1,30 @@
-<div *ngIf="genre">
+<mat-card *ngIf="genre">
   <div>
     <span>{{ genre.id }}</span>
   </div>
-  <div>
-    <input type="text" placeholder="genre-name" [(ngModel)]="genre.name" />
+  
+  <div class="form">
+    <mat-form-field appearance="fill">
+      <mat-label>Name</mat-label>
+      <input matInput [(ngModel)]="genre.name" />
+    </mat-form-field>
+    
+    <mat-form-field appearance="fill">
+      <mat-label>Parent genre</mat-label>
+      <mat-select [(ngModel)]="genre.parentGenre">
+        <mat-option *ngFor="let option of selectableGenres" [value]="option">
+          {{ option.name }}        
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
   </div>
+  
+  
+  <a *ngIf="genre.parentGenre" [routerLink]="['/genres', genre.parentGenre.id]">
+    {{ genre.parentGenre.name }}
+  </a>
     
-  <div>
-    Main genre:
-    <select [(ngModel)]="genre.parentGenre">
-      <option [ngValue]="null">None</option>
-      <option *ngFor="let option of selectableGenres" 
-        [ngValue]="option">
-        {{ option.name }}
-      </option>
-    </select>
-    <a *ngIf="genre.parentGenre" [routerLink]="['/genres', genre.parentGenre.id]">
-      {{ genre.parentGenre.name }}
-    </a>
-  </div>    
-    
-  <div *ngIf="genre.id">
+  <!-- <div *ngIf="genre.id">
     <div *ngIf="genre.genres.length > 0">  
       Subgenres  
       <ul>
@@ -31,8 +35,8 @@
         </li>
       </ul>
     </div>    
-  </div>
-</div>
+  </div> -->
+</mat-card>
 <div>
   <button (click)="saveGenre()">Save</button>
   <button (click)="deleteGenre()">Delete</button>
