--- a/Music.Web/ClientApp/src/app/discs/discs.component.html
+++ b/Music.Web/ClientApp/src/app/discs/discs.component.html
@@ -12,6 +12,11 @@
       <th mat-header-cell *matHeaderCellDef>Number</th>
       <td mat-cell *matCellDef="let disc">{{ disc.number }}</td>
     </ng-container>
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let disc">{{ disc.name }}</td>
+    </ng-container>
     
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let disc; columns: displayedColumns;" (click)="goToDisc(disc)"></tr>
