--- a/Music.Web/ClientApp/src/app/artist/artist.component.html
+++ b/Music.Web/ClientApp/src/app/artist/artist.component.html
@@ -1,14 +1,19 @@
-<div *ngIf="artist">
+<mat-card *ngIf="artist">
   <div>
     <span>{{ artist.id }}</span>
   </div>
-  <div>
-    <input type="text" placeholder="artist-name" [(ngModel)]="artist.name" />
+
+  <div class="form">
+
+    <mat-form-field appearance="fill">
+      <mat-label>Name</mat-label>
+      <input matInput [(ngModel)]="artist.name" type="text" />
+    </mat-form-field>
+
   </div>
-</div>
+</mat-card>
 <div>
   <button (click)="saveArtist()">Save</button>
   <button (click)="deleteArtist()">Delete</button>
   <a [routerLink]="['/artists']">Back</a>
 </div>
- 
