--- a/Music.Web/ClientApp/src/styles.css
+++ b/Music.Web/ClientApp/src/styles.css
@@ -16,12 +16,18 @@ code {
 }
 
 html, body { height: 100%; }
-body { 
-  margin: 0; 
-  font-family: Roboto, "Helvetica Neue", sans-serif; 
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
   background: #303030;
 }
 
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+mat-card .form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
