contributiontype enum gemaakt

--- a/Music.Web/ClientApp/src/app/components/track/track.component.html
+++ b/Music.Web/ClientApp/src/app/components/track/track.component.html
@@ -31,6 +31,37 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Artists</mat-label>
+      <mat-chip-list #chipList aria-label="Artists">
+        <mat-chip
+          *ngFor="let artist of selectedArtists"
+          (removed)="remove(artist)">
+          {{artist.name}}
+          <button matChipRemove>
+            <mat-icon>cancel</mat-icon>
+          </button>
+        </mat-chip>
+        <input
+          placeholder="New artist..."
+          #artistInput
+          [formControl]="artistCtrl"
+          [matAutocomplete]="auto"
+          [matChipInputFor]="chipList"
+          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+          (matChipInputTokenEnd)="add($event.value)">
+      </mat-chip-list>
+      <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+        <mat-option *ngFor="let artist of filteredArtists | async" [value]="artist">
+          {{artist.name}}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+
+    <div>
+      <span *ngFor="let artist of selectedArtists">{{ artist.name }}</span>
+    </div>
   </div>
 </mat-card>
 <div>
