voortgang chips selector in track component

--- a/Music.Web/ClientApp/src/app/components/track/track.component.html
+++ b/Music.Web/ClientApp/src/app/components/track/track.component.html
@@ -50,11 +50,15 @@
           [matAutocomplete]="auto"
           [matChipInputFor]="chipList"
           [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-          (matChipInputTokenEnd)="add($event.value)">
+          (matChipInputTokenEnd)="add($event)">
       </mat-chip-list>
-      <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
-        <mat-option *ngFor="let artist of filteredArtists | async" [value]="artist">
-          {{artist.name}}
+      <mat-autocomplete
+        #auto="matAutocomplete"
+        (optionSelected)="selectedArtist($event)">
+        <mat-option
+          *ngFor="let artist of filteredArtists | async"
+          [value]="artist">
+          {{artist}}
         </mat-option>
       </mat-autocomplete>
     </mat-form-field>
