--- a/Music.Web/ClientApp/src/app/components/tracks/tracks.component.html
+++ b/Music.Web/ClientApp/src/app/components/tracks/tracks.component.html
@@ -2,24 +2,29 @@
   <a mat-button [routerLink]="['/tracks', 'new']">Create track</a>
 
   <table mat-table [dataSource]="tracks">
-    
+
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>ID</th>
       <td mat-cell *matCellDef="let track">{{ track.id }}</td>
     </ng-container>
-    
+
     <ng-container matColumnDef="number">
       <th mat-header-cell *matHeaderCellDef>Number</th>
       <td mat-cell *matCellDef="let track">{{ track.number }}</td>
     </ng-container>
-    
+
+    <ng-container matColumnDef="artist">
+      <th mat-header-cell *matHeaderCellDef>Artist</th>
+      <td mat-cell *matCellDef="let track">{{ artistDisplay(track) }}</td>
+    </ng-container>
+
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let track">{{ track.name }}</td>
     </ng-container>
-    
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let track; columns: displayedColumns;" (click)="goToTrack(track)"></tr>
-    
+
   </table>
 </mat-card>
