--- a/Music.Web/ClientApp/src/app/components/tracks/tracks.component.html
+++ b/Music.Web/ClientApp/src/app/components/tracks/tracks.component.html
@@ -25,7 +25,7 @@
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let track">{{ track.name }}</td>
+      <td mat-cell *matCellDef="let track">{{ trackNameDisplay(track) }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
