--- a/Music.Web/ClientApp/src/app/components/artist/artist.component.html
+++ b/Music.Web/ClientApp/src/app/components/artist/artist.component.html
@@ -1,19 +1,24 @@
 <mat-card>
-  <div>
-    <span>{{ artist.id }}</span>
-  </div>
+  <mat-card-content>
+    <div>
+      <span>{{ artist.id }}</span>
+    </div>
 
-  <div class="form">
+    <div class="form">
 
-    <mat-form-field appearance="fill">
-      <mat-label>Name</mat-label>
-      <input matInput [(ngModel)]="artist.name" type="text" />
-    </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Name</mat-label>
+        <input matInput [(ngModel)]="artist.name" type="text" />
+      </mat-form-field>
 
-  </div>
+    </div>
+
+
+    <div>
+      <button (click)="saveArtist()">Save</button>
+      <button (click)="deleteArtist()">Delete</button>
+      <a [routerLink]="['/artists']">Back</a>
+    </div>
+
+  </mat-card-content>
 </mat-card>
-<div>
-  <button (click)="saveArtist()">Save</button>
-  <button (click)="deleteArtist()">Delete</button>
-  <a [routerLink]="['/artists']">Back</a>
-</div>
